[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "damn"
version = "0.0.2"
description = "Monitor dam gauges and send an alert to a mobile device if certain levels are reached."
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
  { name = "Bryce Jasmer", email = "bryce@jasmer.com" },
]
# TODO: put in some project specific keywords for searching on PyPI
# keywords = ["one", "two"]
#
# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "click"
]

[project.urls]
"Homepage" = "https://gitlab.com/b-jazz/damn"
"Bug Tracker" = "https://gitlab.com/b-jazz/damn/-/issues"

[project.scripts]
damn = "damn.damn_main:main"

[tool.black]
# https://github.com/psf/black
target-version = ["py313"]
line-length = 120
color = true
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = "py313"
line_length = 120
